<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="WebViewLayout">

                <ImageView
                    android:id="@+id/iv_template"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true" />

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:resize_mode="fixed_width"
                    app:use_controller="false" />

                <WebView
                    android:id="@+id/web_view_inapp"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    />

                <LinearLayout
                    android:id="@+id/ll_text_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp" />

                    <FrameLayout
                        android:id="@+id/ll_coupon_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_coupon_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center_horizontal|center_vertical"
                            android:ellipsize="end"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/coupon_code" />

                        <TextView
                            android:id="@+id/tv_coupon_code_with_button"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start|center_horizontal"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="140dp"
                            android:background="@drawable/textview_border"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:paddingLeft="45dp"
                            android:paddingTop="15dp"
                            android:paddingRight="45dp"
                            android:paddingBottom="15dp"
                            android:text="@string/coupon_code"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/copyButton"
                            android:layout_width="95dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            android:layout_marginStart="190dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_corners_full"
                            android:padding="6dp"
                            android:text="@string/kopyala"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/content_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/content_copy_24" />

                    </FrameLayout>


                </LinearLayout>

                <com.relateddigital.relateddigital_google.inapp.inappmessages.SmileRating
                    android:id="@+id/smileRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    app:isIndicator="false" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:visibility="gone" />

                <com.relateddigital.relateddigital_google.inapp.inappmessages.NpsWithNumbersView
                    android:id="@+id/npsWithNumbersView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_template"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corners_full"
                        android:padding="5dp"
                        android:text="@string/OK"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_template_second"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corners_full"
                        android:padding="5dp"
                        android:text="@string/OK"
                        android:textAllCaps="false"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="top|end"
                android:layout_margin="5dp"
                android:textColor="#fff" />

        </FrameLayout>
    </ScrollView>
</LinearLayout>