<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mode" translatable="false">Day</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="button">button</string>
    <string name="close">close</string>
    <string name="smile_rating_terrible">Terrible</string>
    <string name="smile_rating_bad">Bad</string>
    <string name="smile_rating_okay">Okay</string>
    <string name="smile_rating_good">Good</string>
    <string name="smile_rating_great">Great</string>
    <string name="OK">OK</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="email_subs_toast">Saved Successfully!</string>

    <string-array name="names">
        <item>@string/smile_rating_terrible</item>
        <item>@string/smile_rating_bad</item>
        <item>@string/smile_rating_okay</item>
        <item>@string/smile_rating_good</item>
        <item>@string/smile_rating_great</item>
    </string-array>

    <string name="missing_subs_email">Please, click on the button to send your subscription.</string>

    <!-- Countdown Timer strings -->
    <string name="colon" translatable="false">:</string>
    <string name="week_name">Week</string>
    <string name="day_name">Day</string>
    <string name="hour_name">Hour</string>
    <string name="minute_name">Minute</string>
    <string name="second_name">Second</string>
    <string name="time_is_over">Time has expired!</string>
    <string name="feedback_toast">Thanks for your feedback!</string>

    <string name="notification_right_arrow" translatable="false">\u003C</string>
    <string name="notification_left_arrow" translatable="false">\u003E</string>

    <string name="invalid_email" translatable="false">invalid email</string>
    <string name="image" translatable="false">image</string>
    <string name="kopyala" translatable="false">Kopyala</string>

</resources>