...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top|end"
            android:layout_margin="5dp"
            android:textColor="#fff" />

...
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.relateddigital.relateddigital_google.inapp.scratchtowin.EraseView
                android:id="@+id/view_to_be_scratched"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp" />
...
